syntax = "proto3";

package api.im.service.session;

import "common/error.proto";
import "common/enums.proto";

option go_package = "github.com/flare/api/im/service/session;session";
option java_multiple_files = true;
option java_package = "api.im.service.session";

// 会话服务
service SessionService {
    // 创建会话
    rpc CreateSession (CreateSessionRequest) returns (CreateSessionResponse);
    // 获取会话信息
    rpc GetSession (GetSessionRequest) returns (GetSessionResponse);
    // 更新会话
    rpc UpdateSession (UpdateSessionRequest) returns (UpdateSessionResponse);
    // 删除会话
    rpc DeleteSession (DeleteSessionRequest) returns (DeleteSessionResponse);
    // 获取用户会话列表
    rpc GetUserSessions (GetUserSessionsRequest) returns (GetUserSessionsResponse);
    // 同步会话
    rpc SyncSessions (SyncSessionsRequest) returns (SyncSessionsResponse);
    // 更新会话未读数
    rpc UpdateUnreadCount (UpdateUnreadCountRequest) returns (UpdateUnreadCountResponse);
    // 批量获取会话信息
    rpc BatchGetSessions (BatchGetSessionsRequest) returns (BatchGetSessionsResponse);
}

// 会话信息
message SessionInfo {
    // 会话ID
    string session_id = 1;
    // 会话类型
    api.im.common.SessionType type = 2;
    // 会话名称
    string name = 3;
    // 会话头像
    string avatar = 4;
    // 会话成员
    repeated string member_ids = 5;
    // 最新消息ID
    string last_message_id = 6;
    // 最新消息时间
    int64 last_message_time = 7;
    // 未读消息数
    int32 unread_count = 8;
    // 是否置顶
    bool is_pinned = 9;
    // 是否免打扰
    bool is_muted = 10;
    // 扩展信息
    map<string, string> extra = 11;
    // 创建时间
    int64 create_time = 12;
    // 更新时间
    int64 update_time = 13;
}

// 创建会话请求
message CreateSessionRequest {
    // 会话类型
    api.im.common.SessionType type = 1;
    // 会话名称
    string name = 2;
    // 会话头像
    string avatar = 3;
    // 会话成员
    repeated string member_ids = 4;
    // 创建者ID
    string creator_id = 5;
    // 扩展信息
    map<string, string> extra = 6;
}

// 创建会话响应
message CreateSessionResponse {
    // 会话信息
    SessionInfo session = 1;
    // 错误信息
    api.im.common.Error error = 2;
}

// 获取会话信息请求
message GetSessionRequest {
    // 会话ID
    string session_id = 1;
}

// 获取会话信息响应
message GetSessionResponse {
    // 会话信息
    SessionInfo session = 1;
    // 错误信息
    api.im.common.Error error = 2;
}

// 更新会话请求
message UpdateSessionRequest {
    // 会话ID
    string session_id = 1;
    // 更新字段
    map<string, string> updates = 2;
}

// 更新会话响应
message UpdateSessionResponse {
    // 更新后的会话信息
    SessionInfo session = 1;
    // 错误信息
    api.im.common.Error error = 2;
}

// 删除会话请求
message DeleteSessionRequest {
    // 会话ID
    string session_id = 1;
}

// 删除会话响应
message DeleteSessionResponse {
    // 是否成功
    bool success = 1;
    // 错误信息
    api.im.common.Error error = 2;
}

// 获取用户会话列表请求
message GetUserSessionsRequest {
    // 用户ID
    string user_id = 1;
    // 分页大小
    int32 page_size = 2;
    // 分页标记
    string page_token = 3;
}

// 获取用户会话列表响应
message GetUserSessionsResponse {
    // 会话列表
    repeated SessionInfo sessions = 1;
    // 下一页标记
    string next_page_token = 2;
    // 错误信息
    api.im.common.Error error = 3;
}

// 同步会话请求
message SyncSessionsRequest {
    // 用户ID
    string user_id = 1;
    // 同步时间戳
    int64 sync_time = 2;
}

// 同步会话响应
message SyncSessionsResponse {
    // 新增的会话
    repeated SessionInfo added_sessions = 1;
    // 更新的会话
    repeated SessionInfo updated_sessions = 2;
    // 删除的会话ID
    repeated string deleted_session_ids = 3;
    // 当前同步时间戳
    int64 current_sync_time = 4;
    // 错误信息
    api.im.common.Error error = 5;
}

// 更新会话未读数请求
message UpdateUnreadCountRequest {
    // 会话ID
    string session_id = 1;
    // 用户ID
    string user_id = 2;
    // 未读数
    int32 unread_count = 3;
}

// 更新会话未读数响应
message UpdateUnreadCountResponse {
    // 是否成功
    bool success = 1;
    // 错误信息
    api.im.common.Error error = 2;
}

// 批量获取会话信息请求
message BatchGetSessionsRequest {
    // 会话ID列表
    repeated string session_ids = 1;
}

// 批量获取会话信息响应
message BatchGetSessionsResponse {
    // 会话信息映射
    map<string, SessionInfo> sessions = 1;
    // 错误信息
    api.im.common.Error error = 2;
} 